bug: add missing source link

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     </div><!--kg-card-end: html--><!--kg-card-begin: html-->
                     <hr>
                     <p>
-                        <strong>Source:</strong> 2020/12/08<br><strong>License:</strong>
-                        <a href="https://creativecommons.org/licenses/by/4.0/?ref=markeliasen.com">
+                        <strong>Source:</strong> <a href="https://github.com/MrEliasen/sql-injection-demo">View here</a><br>
+                        <strong>License:</strong> <a href="https://creativecommons.org/licenses/by/4.0/?ref=markeliasen.com">
                             Creative Commons Attribution 4.0 International License
                         </a>
                     </p>
