--- a/index.html
+++ b/index.html
@@ -68,15 +68,10 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="footer-bottom-wrap clearfix">
-                    <div class="social-links-wrap">
-                        <ul class="social-links">
-                            <li><a href="https://www.linkedin.com/in/markeliasen/"><i class="fa fa-linkedin"></i></a>
-                            </li>
-                            <li><a href="https://markeliasen.com/rss/"><i class="fa fa-rss"></i></a></li>
-                        </ul>
-                    </div>
                     <div class="copyright-info">
-                        SQL Demo app by Mark Eliasen.
+                        SQL Demo app by <a href="https://www.linkedin.com/in/markeliasen/">
+                            <u>Mark Eliasen</u>
+                        </a>
                     </div>
                 </div>
             </div>
